--- a/cloudflow/notebooks/sandbot_current_fcst.ipynb
+++ b/cloudflow/notebooks/sandbot_current_fcst.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,15 @@
     "    #nv = nv - 1\n",
     "    #print(f\"DEBUGGING - nv :  {nv}, len: {len(nv)}\")\n",
     "\n",
-    "    ds.close()"
+    "    ds.close()\n",
+    "    \n",
+    "    # TODO: Check where -140 value is in zeta for Cook Inlet\n",
+    "    #da.values.min()\n",
+    "    #-137.86069\n",
+    "    # . was trying to read just the bad values\n",
+    "    # Python will not execute the below code grabbed from a notebook.\n",
+    "    # I understand what they were trying to do\n",
+    "    # da[da.values == da.values.min()]"
    ]
   },
   {
