ROMS currents vector plots

--- a/cloudflow/notebooks/failed_attempts.ipynb
+++ b/cloudflow/notebooks/failed_attempts.ipynb
@@ -35,6 +35,63 @@
     "                       data_v.to_pandas().to_numpy(),\n",
     "                       regrid_shape=2)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    if variable == 'currents':\n",
+    "\n",
+    "        #eta_u = 1044 ;\n",
+    "        #xi_u = 723 ;\n",
+    "        #eta_v = 1043 ;\n",
+    "        #xi_v = 724 ;\n",
+    "        \n",
+    "        # Get the dimensions of u/v (last index)\n",
+    "        eta_u = ds['eta_u'].values[-1]\n",
+    "        xi_u = ds['xi_u'].values[-1]\n",
+    "        eta_v = ds['eta_v'].values[-1]\n",
+    "        xi_v = ds['xi_v'].values[-1]\n",
+    "        \n",
+    "        # Last indices\n",
+    "        print(f\"eta_u : {eta_u}\") #1043\n",
+    "        print(f\"xi_u : {xi_u}\")   # 722\n",
+    "        print(f\"eta_v : {eta_v}\") # 1042\n",
+    "        print(f\"xi_v : {xi_v}\")   #723\n",
+    "    \n",
+    "        #u(ocean_time, s_rho, eta_u, xi_u) ; 1044 x 723\n",
+    "        #v(ocean_time, s_rho, eta_v, xi_v) ; 1043 x 724\n",
+    "        #lon_u(eta_u, xi_u) ; 1044 x 723\n",
+    "        #lat_u(eta_u, xi_u)   1044 x 723\n",
+    "        #lon_v(eta_v, xi_v)   1043 x 724\n",
+    "        #lat_v(eta_v, xi_v)   1043 x 724\n",
+    "        #u(ocean_time, s_rho, eta_u, xi_u) ; 0-1043 x 0-722\n",
+    "        #v(ocean_time, s_rho, eta_v, xi_v) ; 0-1042 x 0-723\n",
+    "        \n",
+    "        data_u = ds['u'].isel(ocean_time=otime)[srho,:,:]\n",
+    "        data_v = ds['v'].isel(ocean_time=otime)[srho,:,:]\n",
+    "    \n",
+    "        lons_u = ds['lon_u'][0:eta_u-1,:].values\n",
+    "        lats_u = ds['lat_u'][0:eta_u-1,:].values\n",
+    "        \n",
+    "        lons_v = ds['lon_v'][:,0:xi_v-1].values\n",
+    "        lats_v = ds['lat_v'][:,0:xi_v-1].values\n",
+    "    \n",
+    "        print(f\"lons_u: {lons_u[0:10]}\")\n",
+    "        print(f\"lons_v: {lons_v[0:10]}\")\n",
+    "        \n",
+    "        da = data_u\n",
+    "        \n",
+    "        #u = ma.masked_invalid(data_u.values)\n",
+    "        #v = ma.masked_invalid(data_v.values)\n",
+    "        \n",
+    "        u = data_u[0:eta_u-1, 0:xi_u].values\n",
+    "        v = data_v[0:eta_v, 0:xi_v-1].values\n",
+    "        \n",
+    "        mag = np.sqrt(np.square(u) + np.square(v))"
+   ]
   }
  ],
  "metadata": {
