--- a/cloudflow/notebooks/sandbot_current_fcst.ipynb
+++ b/cloudflow/notebooks/sandbot_current_fcst.ipynb
@@ -116,9 +116,11 @@
     "    It depends on a file being present in COMROT 'current.fcst'\n",
     "    \"\"\"\n",
     "    \n",
+    "    #TODO: implement this so it only opens one file. Time is incoming argument.\n",
+    "    \n",
     "    if DEBUG:\n",
-    "        cur_file = f'{COMROT}/current.fcst'        \n",
-    "        #cur_file = f'{COMROT}/testing.fcst'\n",
+    "        #cur_file = f'{COMROT}/current.fcst'        \n",
+    "        cur_file = f'{COMROT}/testing.fcst'\n",
     "    else:\n",
     "        cur_file = f'{COMROT}/current.fcst'\n",
     "    \n",
@@ -134,10 +136,10 @@
     "    fcstdate = fcst.split('.')[-1]\n",
     "    HH = fcstdate[8:10]\n",
     "          \n",
-    "    if DEBUG: # Only grab first 0-9 hours. Faster!\n",
-    "        filespec = f'{COMDIR}/nos.{OFS}.fields.f00*.t{HH}z.nc'\n",
-    "    else: # Grab all hours\n",
-    "        filespec = f'{COMDIR}/nos.{OFS}.fields.f*.t{HH}z.nc'\n",
+    "    #if DEBUG: # Only grab first 0-9 hours. Faster!\n",
+    "    filespec = f'{COMDIR}/nos.{OFS}.fields.f00*.t{HH}z.nc'\n",
+    "    #else: # Grab all hours\n",
+    "    #    filespec = f'{COMDIR}/nos.{OFS}.fields.f*.t{HH}z.nc'\n",
     "        \n",
     "    print(f'filespec is: {filespec}')\n",
     "    if OFS in utils.roms_models:\n",
@@ -155,34 +157,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def testvect():\n",
+    "    \n",
+    "    otime=0\n",
+    "    srho=0\n",
+    "    ds = dsofs_curr_fcst()\n",
+    "\n",
+    "    #eta_u = 1044 ;\n",
+    "    #xi_u = 723 ;\n",
+    "    #eta_v = 1043 ;\n",
+    "    #xi_v = 724 ;\n",
+    "\n",
+    "    # Get the dimensions of u/v\n",
+    "    eta_u = ds['eta_u'].values[-1]\n",
+    "    xi_u = ds['xi_u'].values[-1]\n",
+    "    eta_v = ds['eta_v'].values[-1]\n",
+    "    xi_v = ds['xi_v'].values[-1]\n",
+    "\n",
+    "    # Last indices\n",
+    "    print(f\"eta_u : {eta_u}\") #1043\n",
+    "    print(f\"xi_u : {xi_u}\")   # 722\n",
+    "    print(f\"eta_v : {eta_v}\") # 1042\n",
+    "    print(f\"xi_v : {xi_v}\")   #723\n",
+    "\n",
+    "\n",
+    "    #u(ocean_time, s_rho, eta_u, xi_u) ; 0-1043 x 0-722\n",
+    "    #v(ocean_time, s_rho, eta_v, xi_v) ; 0-1042 x 0-723\n",
+    "    data_u = ds['u'].isel(ocean_time=otime)[srho,:,:]\n",
+    "    data_v = ds['v'].isel(ocean_time=otime)[srho,:,:]\n",
+    "\n",
+    "    lons_u = ds['lon_u'][0:eta_u-1,:].values\n",
+    "    lats_u = ds['lat_u'][0:eta_u-1,:].values\n",
+    "    lons_v = ds['lon_v'][:,0:xi_v-1].values\n",
+    "    lats_v = ds['lat_v'][:,0:xi_v-1].values\n",
+    "\n",
+    "    #1044x723 \n",
+    "    #1043x724\n",
+    "\n",
+    "    #da = data_u[:,:,srho]\n",
+    "    #da = data_u\n",
+    "    #da\n",
+    "    #lons\n",
+    "\n",
+    "    #u = ma.masked_invalid(data_u.values)\n",
+    "    #v = ma.masked_invalid(data_v.values)\n",
+    "\n",
+    "\n",
+    "    u = data_u[0:1042, 0:722].values\n",
+    "    v = data_v[0:1042, 0:722].values\n",
+    "    #data_u 1044x723\n",
+    "    #data_v 1043x724\n",
+    "    #ds['lon_u']\n",
+    "    #u\n",
+    "    #v\n",
+    "    data=data_v[0:1042, 0:723]\n",
+    "    print(data)\n",
+    "    mag = np.sqrt(np.square(u) + np.square(v))\n",
+    "    #[0:1042, 0:723]\n",
+    "\n",
+    "    #ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def plot_roms(ds, variable, s3upload=False) -> str:\n",
     "        \n",
+    "    otime=1\n",
+    "    srho=-1\n",
     "    vmin = None\n",
     "    vmax = None\n",
     "    \n",
     "    if variable == 'zeta':\n",
-    "        da = ds[variable].isel(ocean_time=1)\n",
+    "        da = ds[variable].isel(ocean_time=otime)\n",
     "        #cmap = cmocean.cm.balance\n",
     "        cmap=plt.get_cmap('jet')\n",
     "        vector = False\n",
     "        vmin=-20.0\n",
     "        vmax=20.0\n",
     "    if variable == 'temp':\n",
-    "        da = ds[variable].isel(ocean_time=1, s_rho=0) #s_rho=0 = surface\n",
+    "        da = ds[variable].isel(ocean_time=otime, s_rho=srho) #s_rho=0 = surface\n",
     "        cmap = cmocean.cm.thermal\n",
     "        vector = False\n",
     "    if variable == 'salt':\n",
     "        #salt(ocean_time, s_rho, eta_rho, xi_rho)\n",
-    "        da = ds[variable].isel(ocean_time=1, s_rho=0)\n",
+    "        da = ds[variable].isel(ocean_time=otime, s_rho=srho)\n",
     "        cmap = cmocean.cm.haline\n",
     "        vector = False\n",
     "    if variable == 'oxygen':\n",
-    "        da = ds[variable].isel(ocean_time=1, s_rho=0)\n",
+    "        da = ds[variable].isel(ocean_time=otime, s_rho=srho)\n",
     "        cmap = cmocean.cm.oxy\n",
     "        vector = False   \n",
     "    if variable == 'Pair':\n",
     "        # Pair(ocean_time, eta_rho, xi_rho)\n",
-    "        da = ds[variable].isel(ocean_time=1)\n",
+    "        da = ds[variable].isel(ocean_time=otime)\n",
     "        cmap = cmocean.cm.diff\n",
     "        vector = False\n",
     "    if variable == 'wind':\n",
@@ -190,8 +261,9 @@
     "\n",
     "        # Uwind(ocean_time, eta_rho, xi_rho) ;\n",
     "        # Vwind(ocean_time, eta_rho, xi_rho) \n",
-    "        data_u = ds['Uwind'].isel(ocean_time=1)\n",
-    "        data_v = ds['Vwind'].isel(ocean_time=1)\n",
+    "        data_u = ds['Uwind'].isel(ocean_time=otime)\n",
+    "        data_v = ds['Vwind'].isel(ocean_time=otime)\n",
+    "        \n",
     "        \n",
     "        lons = ds['lon_rho'].values\n",
     "        lats = ds['lat_rho'].values\n",
@@ -202,29 +274,55 @@
     "              \n",
     "        mag = np.sqrt(np.square(u) + np.square(v))\n",
     "        vector = True\n",
-    "    if variable == 'currents':\n",
-    "        da = ''\n",
+    "    if variable == 'currents':      \n",
+    "        cmap = plt.get_cmap('YlOrBr')\n",
+    "\n",
+    "        # Select only the ocean time needed. \n",
+    "        # Select u/v data at layer srho (last index = water surface) \n",
+    "        u = ds.u.values[otime, srho, :, :]\n",
+    "        v = ds.v.values[otime, srho, :, :]\n",
+    "        #print(f'u before (ds.u.shape): {u.shape}')\n",
+    "        #print(f'v before (ds.v.shape): {v.shape}')\n",
+    "\n",
+    "        # Interpolate u/v to rho coordinates\n",
+    "        ds['u_rho'] = (('eta_rho', 'xi_rho'), np.ma.masked_values(np.zeros_like(ds.zeta.isel(ocean_time=otime)), 0.0))\n",
+    "        ds['v_rho'] = (('eta_rho', 'xi_rho'), np.ma.masked_values(np.zeros_like(ds.zeta.isel(ocean_time=otime)), 0.0))\n",
+    "        ds.u_rho[1:, 1:] = (u[0:-1, :] + u[1:, :]) * 0.5\n",
+    "        ds.v_rho[1:, 1:] = (v[:, 0:-1] + v[:, 1:]) * 0.5\n",
+    "        #print(f'u after (ds.u_rho.shape): {ds.u_rho.shape}')\n",
+    "        #print(f'v after (ds.v_rho.shape): {ds.v_rho.shape}')       \n",
+    "        \n",
+    "        data_u = ds['u_rho']\n",
+    "        data_v = ds['v_rho']\n",
+    "        \n",
+    "        da = ds['u'].isel(ocean_time=otime)[srho,:,:]\n",
+    "        u = data_u.values\n",
+    "        v = data_v.values       \n",
+    "        lons = ds['lon_rho'].values\n",
+    "        lats = ds['lat_rho'].values        \n",
+    "        mag = np.sqrt(np.square(u) + np.square(v))\n",
     "        vector = True\n",
+    "    # end if currents\n",
     "    \n",
     "    fig = plt.figure(figsize=(12,5), dpi=72)\n",
     "    ax = fig.add_axes([0, 0.1, 1, 1], projection=ccrs.PlateCarree())\n",
     "    \n",
     "    if not vector:\n",
-    "        \n",
+    "        # Normal plot\n",
     "        im = ax.contourf(da.lon_rho, da.lat_rho, da.values,\n",
     "                     transform=ccrs.PlateCarree(), levels=12,\n",
     "                     vmin=vmin, vmax=vmax, cmap=cmap )\n",
-    "        \n",
     "    ## VECTORS!\n",
     "    else:\n",
     "        # Plot the magnitude\n",
-    "        im = ax.contourf(da.lon_rho, da.lat_rho, mag,\n",
+    "        im = ax.contourf(lons, lats, mag,\n",
     "             transform=ccrs.PlateCarree(), levels=12,\n",
     "             cmap=cmap)\n",
     "    \n",
+    "        # Plot the quivers\n",
     "        im = ax.quiver(lons, lats, u, v, cmap=cmap,\n",
     "                       transform=ccrs.PlateCarree(),\n",
-    "                       regrid_shape=30)\n",
+    "                       regrid_shape=32)\n",
     "                \n",
     "    coast_10m = cfeature.NaturalEarthFeature(\n",
     "        'physical', 'land', '10m',\n",
@@ -244,7 +342,6 @@
     "    title = ds.title\n",
     "    ax.set_title(f'{title}\\n{init_str}    {valid_str}')\n",
     "\n",
-    "    \n",
     "    if vmin:\n",
     "        cm = plt.cm.ScalarMappable(cmap=cmap)\n",
     "        cm.set_clim(vmin, vmax)\n",
@@ -389,11 +486,11 @@
     "    if not ( re.search(\"LEOFS\", ds.title) or re.search(\"LMHOFS\", ds.title)):\n",
     "    # if not re.search(\"Lake\", ds.title):\n",
     "        # Obscures data\n",
-    "        if variable == 'temp':\n",
-    "            land = cfeature.NaturalEarthFeature(\n",
-    "                'physical', 'land', '10m',\n",
-    "                edgecolor='black', facecolor='0.75')\n",
-    "            ax.add_feature(land)\n",
+    "        #if variable == 'temp':\n",
+    "        land = cfeature.NaturalEarthFeature(\n",
+    "            'physical', 'land', '10m',\n",
+    "            edgecolor='black', facecolor='0.75')\n",
+    "        ax.add_feature(land)\n",
     "    else:\n",
     "        # We currently aren't running any saltwater lakes\n",
     "        if variable == \"salt\": \n",
@@ -635,6 +732,8 @@
    "outputs": [],
    "source": [
     "def main():\n",
+    "    \n",
+    "    import traceback\n",
     "       \n",
     "    ds_ofs = dsofs_curr_fcst()\n",
     "    model = get_model_type(ds_ofs)\n",
@@ -650,11 +749,12 @@
     "\n",
     "\n",
     "    #plot_vars = ['temp', 'zeta']\n",
-    "    #plot_vars = ['temp', 'zeta', 'salt', 'wind']\n",
-    "    plot_vars = ['temp', 'zeta', 'salt', 'oxygen', 'wind']\n",
+    "    #plot_vars = ['temp', 'zeta', 'salt', 'wind', 'oxygen']\n",
+    "    plot_vars = ['temp', 'zeta', 'salt',  'wind', 'currents']\n",
     "    #plot_vars = ['temp']\n",
     "    #plot_vars = ['wind']\n",
     "    #plot_vars = ['zeta']\n",
+    "    #plot_vars = ['currents']\n",
     "\n",
     "    imagelist = []\n",
     "    \n",
@@ -662,6 +762,8 @@
     "        upload = False\n",
     "    else:\n",
     "        upload = True\n",
+    "        \n",
+    "#    try:\n",
     "        \n",
     "    for var in plot_vars:\n",
     "        #imagename = plot_runner(ds_ofs, var, s3upload=upload)\n",
@@ -675,7 +777,11 @@
     "\n",
     "        if imagename:\n",
     "            imagelist.append(imagename)\n",
-    "\n",
+    "            \n",
+    "#    except Exception as e:\n",
+    "#        print(\"Handling any exceptions cleanly\")\n",
+    "#        traceback.print_stack()\n",
+    "        \n",
     "    ds_ofs.close()\n",
     "    \n",
     "    if upload:\n",
