Fix INIT date in plots

--- a/cloudflow/notebooks/sandbot_current_fcst.ipynb
+++ b/cloudflow/notebooks/sandbot_current_fcst.ipynb
@@ -10,7 +10,9 @@
     "import os\n",
     "import glob\n",
     "import time as timelib\n",
+    "from datetime import timedelta\n",
     "from datetime import datetime\n",
+    "\n",
     "import re\n",
     "import io\n",
     "import math\n",
@@ -330,12 +332,11 @@
     "    )\n",
     "    ax.add_feature(coast_10m);\n",
     "\n",
-    "    # TODO: FIX BUG in INIT time: This does not work for ciofs since the first history file is not at hour 00, but at hour 01\n",
-    "    # maybe use this global attribute instead, use the t00z portion of the string\n",
-    "    # :file = \"nos.ciofs.fields.forecast.20200828.t00z_0008.nc\" ;\n",
-    "    init = ds.ocean_time.isel(ocean_time=0)\n",
-    "    init_str = f\"INIT: {num2date(init, init.units)} UTC\"\n",
-    "    \n",
+    "    #init = ds.ocean_time.isel(ocean_time=0) - Not always right    \n",
+    "    init=ds.dstart.isel(ocean_time=otime) # init is: <xarray.DataArray 'dstart' (ocean_time: 2)>\n",
+    "    init_datetime = num2date(init, init.units) + timedelta(hours=6)\n",
+    "    init_str = f\"INIT: {init_datetime} UTC\" \n",
+    "\n",
     "    valid = da.ocean_time\n",
     "    valid_str = f\"VALID: {num2date(valid, valid.units)} UTC\"\n",
     "    \n",
@@ -361,7 +362,6 @@
     "        cbar.set_label(f'{long_name}')\n",
     "        \n",
     "    # Add the forecast date and time to the filename\n",
-    "    init_datetime = num2date(init, init.units)\n",
     "    fmt = '%Y%m%d_%HZ' #'%Y-%m-%d %H:%M:%S'\n",
     "    ini_str = f\"{init_datetime.strftime(fmt)}\"\n",
     "    \n",
