minor tweaks to plots

--- a/cloudflow/notebooks/sandbot_current_fcst.ipynb
+++ b/cloudflow/notebooks/sandbot_current_fcst.ipynb
@@ -229,7 +229,8 @@
     "def plot_roms(ds, variable, s3upload=False) -> str:\n",
     "        \n",
     "    otime=1\n",
-    "    srho=-1\n",
+    "    srho = len(ds.s_rho) - 1\n",
+    "    # print(f\"DEBUG: srho is {srho}\")\n",
     "    vmin = None\n",
     "    vmax = None\n",
     "    \n",
@@ -510,8 +511,7 @@
     "    #for record, geometry in zip(shp.records(), shp.geometries()):\n",
     "    #    ax.add_geometries([geometry], ccrs.PlateCarree(), facecolor='lightgray',\n",
     "    #                       edgecolor='black')\n",
-    "    \n",
-    "    \n",
+    "     \n",
     "    title = ds.title\n",
     "    time_array = ds.variables['time']\n",
     "    init = time_array[0]\n",
@@ -747,14 +747,15 @@
     "\n",
     "    storageService = S3Storage()\n",
     "\n",
-    "\n",
+    "    plot_vars = ['temp', 'zeta', 'salt',  'wind', 'currents']\n",
+    "    \n",
     "    #plot_vars = ['temp', 'zeta']\n",
     "    #plot_vars = ['temp', 'zeta', 'salt', 'wind', 'oxygen']\n",
-    "    plot_vars = ['temp', 'zeta', 'salt',  'wind', 'currents']\n",
     "    #plot_vars = ['temp']\n",
     "    #plot_vars = ['wind']\n",
     "    #plot_vars = ['zeta']\n",
-    "    #plot_vars = ['currents']\n",
+    "    \n",
+    "    if DEBUG: plot_vars = ['currents']\n",
     "\n",
     "    imagelist = []\n",
     "    \n",
@@ -798,7 +799,9 @@
    "outputs": [],
    "source": [
     "main()\n",
-    "#testing()"
+    "#testing()\n",
+    "#ds_ofs = dsofs_curr_fcst()\n",
+    "#ds_ofs"
    ]
   },
   {
