--- a/cloudflow/notebooks/sandbot_current_fcst.ipynb
+++ b/cloudflow/notebooks/sandbot_current_fcst.ipynb
@@ -316,10 +316,9 @@
     "    maskrho = ds['mask_rho'].isel(ocean_time=otime)\n",
     "\n",
     "    vari = da.values\n",
-    "    print(vari.shape)\n",
-    "    print(vari.size)\n",
-    "    print(maskrho.shape)\n",
-    "    print(maskrho.size)\n",
+    "    \n",
+    "    print('shape of Variable :', vari.shape)\n",
+    "    print('shape of Mask :', maskrho.shape)\n",
     "\n",
     "    vari[np.where(maskrho==0)]=np.nan\n",
     "    \n",
@@ -871,10 +870,8 @@
       "init stub\n",
       "... Plotting these variables: ['temp', 'zeta', 'salt', 'wind', 'currents']\n",
       "... calling plot routine for roms:temp ...\n",
-      "(1044, 724)\n",
-      "755856\n",
-      "(1044, 724)\n",
-      "755856\n"
+      "shape of Variable : (1044, 724)\n",
+      "shape of Mask : (1044, 724)\n"
      ]
     },
     {
@@ -892,69 +889,8 @@
      "text": [
       "init stub\n",
       "... calling plot routine for roms:zeta ...\n",
-      "(1044, 724)\n",
-      "755856\n",
-      "(1044, 724)\n",
-      "755856\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/tljh/user/lib/python3.7/site-packages/cartopy/mpl/geoaxes.py:388: MatplotlibDeprecationWarning: \n",
-      "The 'inframe' parameter of draw() was deprecated in Matplotlib 3.3 and will be removed two minor releases later. Use Axes.redraw_in_frame() instead. If any parameter follows 'inframe', they should be passed as keyword, not positionally.\n",
-      "  inframe=inframe)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "init stub\n",
-      "... calling plot routine for roms:salt ...\n",
-      "(1044, 724)\n",
-      "755856\n",
-      "(1044, 724)\n",
-      "755856\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/tljh/user/lib/python3.7/site-packages/cartopy/mpl/geoaxes.py:388: MatplotlibDeprecationWarning: \n",
-      "The 'inframe' parameter of draw() was deprecated in Matplotlib 3.3 and will be removed two minor releases later. Use Axes.redraw_in_frame() instead. If any parameter follows 'inframe', they should be passed as keyword, not positionally.\n",
-      "  inframe=inframe)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "init stub\n",
-      "... calling plot routine for roms:wind ...\n",
-      "(1044, 724)\n",
-      "755856\n",
-      "(1044, 724)\n",
-      "755856\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/tljh/user/lib/python3.7/site-packages/cartopy/mpl/geoaxes.py:388: MatplotlibDeprecationWarning: \n",
-      "The 'inframe' parameter of draw() was deprecated in Matplotlib 3.3 and will be removed two minor releases later. Use Axes.redraw_in_frame() instead. If any parameter follows 'inframe', they should be passed as keyword, not positionally.\n",
-      "  inframe=inframe)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "init stub\n",
-      "... calling plot routine for roms:currents ...\n"
+      "shape of Variable : (1044, 724)\n",
+      "shape of Mask : (1044, 724)\n"
      ]
     }
    ],
