Fixed color patch (#22)
* working on fix

* Colorpatch Fixed

* Colorpatch Fixed

* Colorpatch modified to skip current plots

* Masking in ROMS plot including vectors

--- a/cloudflow/notebooks/sandbot_current_fcst.ipynb
+++ b/cloudflow/notebooks/sandbot_current_fcst.ipynb
@@ -35,7 +35,6 @@
     "from cloudflow.utils import romsUtil as utils\n",
     "\n",
     "DEBUG = False\n",
-    "#DEBUG = True\n",
     "debug=DEBUG\n",
     "upload = True\n",
     "\n",
@@ -122,6 +121,7 @@
     "    \n",
     "    if DEBUG:\n",
     "        cur_file = f'{COMROT}/testing.fcst'\n",
+    "\n",
     "    else:\n",
     "        cur_file = f'{COMROT}/current.fcst'\n",
     "    \n",
@@ -235,6 +235,7 @@
     "    vmin = None\n",
     "    vmax = None\n",
     "    \n",
+    "\n",
     "    if variable == 'zeta':\n",
     "        da = ds[variable].isel(ocean_time=otime)\n",
     "        #cmap = cmocean.cm.balance\n",
@@ -242,10 +243,12 @@
     "        vector = False\n",
     "        vmin=-20.0\n",
     "        vmax=20.0\n",
+    "\n",
     "    if variable == 'temp':\n",
     "        da = ds[variable].isel(ocean_time=otime, s_rho=srho) #s_rho=0 = surface\n",
     "        cmap = cmocean.cm.thermal\n",
     "        vector = False\n",
+    "\n",
     "    if variable == 'salt':\n",
     "        #salt(ocean_time, s_rho, eta_rho, xi_rho)\n",
     "        da = ds[variable].isel(ocean_time=otime, s_rho=srho)\n",
@@ -311,15 +314,30 @@
     "    fig = plt.figure(figsize=(12,5), dpi=72)\n",
     "    ax = fig.add_axes([0, 0.1, 1, 1], projection=ccrs.PlateCarree())\n",
     "    \n",
+    "    maskrho = ds['mask_rho'].isel(ocean_time=otime)\n",
+    "\n",
+    "    \n",
     "    if not vector:\n",
     "        # Normal plot\n",
-    "        im = ax.contourf(da.lon_rho, da.lat_rho, da.values,\n",
+    "\n",
+    "        vari = da.values    \n",
+    "\n",
+    "        vari[np.where(maskrho==0)]=np.nan\n",
+    "        \n",
+    "        im = ax.contourf(da.lon_rho, da.lat_rho, vari,\n",
     "                     transform=ccrs.PlateCarree(), levels=12,\n",
     "                     vmin=vmin, vmax=vmax, cmap=cmap )\n",
     "    ## VECTORS!\n",
     "    else:\n",
     "        # Plot the magnitude\n",
-    "        im = ax.contourf(lons, lats, mag,\n",
+    "        \n",
+    "        vari = mag    \n",
+    "\n",
+    "        vari[np.where(maskrho==0)]=np.nan\n",
+    "        u[np.where(maskrho==0)]=np.nan\n",
+    "        v[np.where(maskrho==0)]=np.nan\n",
+    "        \n",
+    "        im = ax.contourf(lons, lats, vari,\n",
     "             transform=ccrs.PlateCarree(), levels=12,\n",
     "             cmap=cmap)\n",
     "    \n",
@@ -852,9 +870,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2020-11-11 12:23:39,041] INFO - flow_runner.run | Beginning Flow run for 'notebook test'\n",
+      "[2020-11-11 12:23:39,048] INFO - flow_runner.set_flow_to_running | Starting flow run.\n",
+      "[2020-11-11 12:23:39,073] INFO - task_runner.run | Task 'run_pynotebook': Starting task run...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 2020-11-11 12:23:39,074  INFO - tasks.run_pynotebook | Running sandbot_current_fcst.py\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sandbot_current_fcst.py:136: DeprecationWarning: tostring() is deprecated. Use tobytes() instead.\n",
+      "  dataset = MFDataset(filespec)\n",
+      "/opt/tljh/user/lib/python3.7/site-packages/cartopy/mpl/geoaxes.py:388: MatplotlibDeprecationWarning: \n",
+      "The 'inframe' parameter of draw() was deprecated in Matplotlib 3.3 and will be removed two minor releases later. Use Axes.redraw_in_frame() instead. If any parameter follows 'inframe', they should be passed as keyword, not positionally.\n",
+      "  inframe=inframe)\n",
+      "... About to load dataset ds_ofs ...\n",
+      "Reading fcst data:  lmhofs.2020111000\n",
+      "COMDIR is:  /com/nos/lmhofs.2020111000\n",
+      "filespec is: /com/nos/lmhofs.2020111000/nos.lmhofs.fields.f00*.t00z.nc\n",
+      "... ds_ofs is loaded ...\n",
+      "... model type is: fvcom\n",
+      "... Plotting these variables: ['temp', 'zeta', 'salt', 'wind', 'currents']\n",
+      "... calling plot routine for fvcom:temp ...\n",
+      ".... Plotting FVCOM - temp ....\n",
+      ".... adding map features and labels ....\n",
+      ".... adding logos ....\n",
+      ".... saving image - docs/20201110_00Z_temp.png ....\n",
+      ".... uploading image to S3 - temp ....\n",
+      "... calling plot routine for fvcom:zeta ...\n",
+      ".... Plotting FVCOM - zeta ....\n",
+      ".... adding map features and labels ....\n",
+      ".... adding logos ....\n",
+      ".... saving image - docs/20201110_00Z_zeta.png ....\n",
+      ".... uploading image to S3 - zeta ....\n",
+      "... calling plot routine for fvcom:salt ...\n",
+      ".... Plotting FVCOM - salt ....\n",
+      ".... adding map features and labels ....\n",
+      "INFO: Not plotting salinity for freshwater lakes ....\n",
+      "... calling plot routine for fvcom:wind ...\n",
+      ".... Plotting FVCOM - wind ....\n",
+      ".... computing wind magnitude .... \n",
+      ".... adding map features and labels ....\n",
+      ".... adding logos ....\n",
+      ".... saving image - docs/20201110_00Z_wind.png ....\n",
+      ".... uploading image to S3 - wind ....\n",
+      "... calling plot routine for fvcom:currents ...\n",
+      ".... Plotting FVCOM - currents ....\n",
+      ".... adding map features and labels ....\n",
+      ".... adding logos ....\n",
+      ".... saving image - docs/20201110_00Z_currents.png ....\n",
+      ".... uploading image to S3 - currents ....\n",
+      "Finished ...\n",
+      "\n",
+      "[2020-11-11 12:23:56,811] INFO - task_runner.run | Task 'run_pynotebook': finished task run for task with final state: 'Success'\n",
+      "[2020-11-11 12:23:56,813] INFO - flow_runner.determine_final_state | Flow run SUCCESS: all reference tasks succeeded\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'PASSED'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from cloudflow.workflows import flows\n",
     "\n",
