--- a/models/adcirc-cora/intel_x86_64.impi_2021.12.1
+++ b/models/adcirc-cora/intel_x86_64.impi_2021.12.1
@@ -23,14 +23,19 @@ setenv COMP_MPCC "mpicc -fc=icc"
 module purge
 module use -a /mnt/efs/fs1/save/environments/spack/share/spack/modules/linux-rhel8-x86_64
 module load intel-oneapi-compilers/2023.1.0-gcc-11.2.1-3a7dxu3
-module load intel-oneapi-mpi/2021.9.0-intel-2021.9.0-egjrbfg
+module load intel-oneapi-mpi/2021.12.1-intel-2021.9.0-6nra3z4
+
+module load hdf5/1.14.3-intel-2021.9.0-jjst2zs
+module load netcdf-fortran/4.6.1-intel-2021.9.0-cpxxwci
+module load netcdf-c/4.9.2-intel-2021.9.0-vkckbzk
+
 setenv MPI_INC "$env(I_MPI_ROOT)/include"
 
-module load zlib-ng/2.1.4-intel-2021.9.0-57ptxrw
-module load libszip/2.1.1-intel-2021.9.0-s3p3pgl
-module load hdf5/1.14.3-intel-2021.9.0-4xskthb
-module load netcdf-fortran/4.6.1-intel-2021.9.0-meeveoj
-module load netcdf-c/4.9.2-intel-2021.9.0-vznmeik
+#module load zlib-ng/2.1.4-intel-2021.9.0-57ptxrw
+#module load libszip/2.1.1-intel-2021.9.0-s3p3pgl
+#module load hdf5/1.14.3-intel-2021.9.0-4xskthb
+#module load netcdf-fortran/4.6.1-intel-2021.9.0-meeveoj
+#module load netcdf-c/4.9.2-intel-2021.9.0-vznmeik
 
 module use -a /usrx/modulefiles
 
