necofs cold run

--- a/TODO
+++ b/TODO
@@ -1,2 +1,6 @@
+Ideas:
 
+Focus is on transition to operations, try to move things towards the operational launch scripts
+
+2025 06 06 - Unify Job/ROMSHindcast and ROMSForecast, only real difference is addition of SDATE and EDATE and loop capability in workflow
 
