Replacing OFS variable dependency with the APP job class variable for Python notebooks

--- a/cloudflow/notebooks/sandbot_latest_fcst_jobobj.ipynb
+++ b/cloudflow/notebooks/sandbot_latest_fcst_jobobj.ipynb
@@ -237,7 +237,7 @@
     "def main(job: Plotting):\n",
     "\n",
     "    COMDIR = job.INDIR\n",
-    "    OFS = job.OFS\n",
+    "    OFS = job.APP\n",
     "    HH = job.HH\n",
     "    rho_vars = job.VARS\n",
     "\n",
